--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <main>
             <!-- Lista de links a ejercicios -->
              <h2>Ejercicios</h2>
+             <ul>
+                <li>
+                    <a href="clase-1/index.html">Clase 1</a>
+                </li>
+             </ul>
         </main>
 
         <footer>
