--- a/clase-2-semana-1/index.html
+++ b/clase-2-semana-1/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>clase 1-Ejercicio 1</title>
+    <title>Document</title>
 </head>
 <body>
-    
     <script src="./index.js"></script>
 </body>
 </html>
