--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
              <ul>
                 <li>
                     <a href="clase-1/index.html">Clase 1</a>
+                    <a href="clase-2-semana-1/index.html">Clase 2</a>
+                    <a href="clase-3-semana-2/index.html">Clase 3</a>
                 </li>
              </ul>
         </main>
