--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                     <a href="clase-1/index.html">Clase 1</a>
                     <a href="clase-2-semana-1/index.html">Clase 2</a>
                     <a href="clase-3-semana-2/index.html">Clase 3</a>
+                    <a href="./clase-4-semana-2/index.htm">Clase 4</a>
+                    <a href="./clase-5-semana-3/index.html">Clase 5</a>
+                    <a href="./clase-6-semana-3/index.html">Clase 6</a>
                 </li>
              </ul>
         </main>
